--- a/package.json
+++ b/package.json
@@ -1,3 +1,18 @@
 {
-    "type" : "module"
+  "name": "node-app",
+  "version": "1.0.0",
+  "description": "a example of node",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  }
 }
