--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
-  "name": "node-app",
+  "name": "app",
   "version": "1.0.0",
-  "description": "a example of node",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  }
+  "license": "ISC"
 }
